Add security mitigation for CVE-2024-3596
The version of FreeRADIUS in CentOS Stream doesn't recognize the
new parameters, but it doesn't fail when they are included.

--- a/templates/radiusd.conf.j2
+++ b/templates/radiusd.conf.j2
@@ -428,6 +428,8 @@ security {
 	#  See also raddb/sites-available/status
 	#
 	status_server = yes
+	limit_proxy_state = auto
+	require_message_authenticator = auto
 }
 
 # PROXY CONFIGURATION
